# the-driver-location-service/docs/swagger.json
@@ -1,11 +1,19 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "A service for finding nearby drivers",
+        "title": "Driver Location Service API",
+        "contact": {},
+        "version": "1.0"
     },
     "paths": {
         "/api/v1/drivers": {
             "post": {
+                "security": [
+                    {
+                        "X-API-KEY": []
+                    }
+                ],
                 "description": "Create a new driver with location",
                 "consumes": [
                     "application/json"
@@ -24,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.CreateDriverRequest"
+                            "$ref": "#/definitions/the-driver-location-service_internal_domain.CreateDriverRequest"
                         }
                     }
                 ],
@@ -32,7 +40,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/domain.Driver"
+                            "$ref": "#/definitions/the-driver-location-service_internal_domain.Driver"
                         }
                     },
                     "400": {
@@ -54,6 +62,11 @@
         },
         "/api/v1/drivers/batch": {
             "post": {
+                "security": [
+                    {
+                        "X-API-KEY": []
+                    }
+                ],
                 "description": "Create multiple drivers in a single request",
                 "consumes": [
                     "application/json"
@@ -72,7 +85,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.BatchCreateRequest"
+                            "$ref": "#/definitions/the-driver-location-service_internal_domain.BatchCreateRequest"
                         }
                     }
                 ],
@@ -103,6 +116,11 @@
         },
         "/api/v1/drivers/search": {
             "post": {
+                "security": [
+                    {
+                        "X-API-KEY": []
+                    }
+                ],
                 "description": "Find drivers near a given location",
                 "consumes": [
                     "application/json"
@@ -121,7 +139,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.SearchRequest"
+                            "$ref": "#/definitions/the-driver-location-service_internal_domain.SearchRequest"
                         }
                     }
                 ],
@@ -152,6 +170,11 @@
         },
         "/api/v1/drivers/{id}": {
             "get": {
+                "security": [
+                    {
+                        "X-API-KEY": []
+                    }
+                ],
                 "description": "Get a driver by its ID",
                 "produces": [
                     "application/json"
@@ -173,7 +196,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Driver"
+                            "$ref": "#/definitions/the-driver-location-service_internal_domain.Driver"
                         }
                     },
                     "400": {
@@ -193,6 +216,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "X-API-KEY": []
+                    }
+                ],
                 "description": "Update a driver's information by ID",
                 "consumes": [
                     "application/json"
@@ -218,7 +246,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Driver"
+                            "$ref": "#/definitions/the-driver-location-service_internal_domain.Driver"
                         }
                     }
                 ],
@@ -226,7 +254,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Driver"
+                            "$ref": "#/definitions/the-driver-location-service_internal_domain.Driver"
                         }
                     },
                     "400": {
@@ -246,6 +274,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "X-API-KEY": []
+                    }
+                ],
                 "description": "Delete a driver by its ID",
                 "produces": [
                     "application/json"
@@ -290,6 +323,11 @@
         },
         "/api/v1/drivers/{id}/location": {
             "patch": {
+                "security": [
+                    {
+                        "X-API-KEY": []
+                    }
+                ],
                 "description": "Update a driver's location by ID",
                 "consumes": [
                     "application/json"
@@ -315,7 +353,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Point"
+                            "$ref": "#/definitions/the-driver-location-service_internal_domain.Point"
                         }
                     }
                 ],
@@ -343,10 +381,34 @@
                     }
                 }
             }
+        },
+        "/health": {
+            "get": {
+                "description": "Check if the service is healthy",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Health check endpoint",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "domain.BatchCreateRequest": {
+        "the-driver-location-service_internal_domain.BatchCreateRequest": {
             "type": "object",
             "required": [
                 "drivers"
@@ -356,12 +418,12 @@
                     "type": "array",
                     "minItems": 1,
                     "items": {
-                        "$ref": "#/definitions/domain.CreateDriverRequest"
+                        "$ref": "#/definitions/the-driver-location-service_internal_domain.CreateDriverRequest"
                     }
                 }
             }
         },
-        "domain.CreateDriverRequest": {
+        "the-driver-location-service_internal_domain.CreateDriverRequest": {
             "type": "object",
             "required": [
                 "location"
@@ -371,11 +433,11 @@
                     "type": "string"
                 },
                 "location": {
-                    "$ref": "#/definitions/domain.Point"
+                    "$ref": "#/definitions/the-driver-location-service_internal_domain.Point"
                 }
             }
         },
-        "domain.Driver": {
+        "the-driver-location-service_internal_domain.Driver": {
             "type": "object",
             "required": [
                 "location"
@@ -388,14 +450,14 @@
                     "type": "string"
                 },
                 "location": {
-                    "$ref": "#/definitions/domain.Point"
+                    "$ref": "#/definitions/the-driver-location-service_internal_domain.Point"
                 },
                 "updated_at": {
                     "type": "string"
                 }
             }
         },
-        "domain.Point": {
+        "the-driver-location-service_internal_domain.Point": {
             "type": "object",
             "required": [
                 "coordinates",
@@ -413,7 +475,7 @@
                 }
             }
         },
-        "domain.SearchRequest": {
+        "the-driver-location-service_internal_domain.SearchRequest": {
             "type": "object",
             "required": [
                 "location",
@@ -425,13 +487,21 @@
                     "minimum": 0
                 },
                 "location": {
-                    "$ref": "#/definitions/domain.Point"
+                    "$ref": "#/definitions/the-driver-location-service_internal_domain.Point"
                 },
                 "radius": {
                     "description": "radius in meters",
                     "type": "number"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "X-API-KEY": {
+            "description": "Type X-API-KEY followed by a space and API key.",
+            "type": "apiKey",
+            "name": "X-API-KEY",
+            "in": "header"
         }
     }
 }
